--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,17 +8,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - id: ssh
-        uses: invi5H/ssh-action@v1
+      - name: 💞 Github actions...
+        uses: actions/checkout@v3
+      - name: 🌈 Deploy with ssh...
+        uses: sebastianjnuwu/ssh-action-deploy@v3
         with:
-          SSH_HOST: 35.154.59.41
-          SSH_USER: ubuntu
-          SSH_KEY: ${{ secrets.ORGANIZATION_SSH_KEY }}
-      - name: Deploy code
-        run: |  
-          ssh -T ubuntu@${{ steps.ssh.outputs.host }} '  # Access output from SSH step
-            cd /home/bhavicreations/domains/gittest.bhavicreations.com/public_html  # Replace with the path to your website directory
-            git pull -v origin production  # Include -v for verbose output
-            # Add any additional deployment commands here
-            echo "DEPLOYMENT_STATUS=success" >> ssh_output.env  # Example output capture
-          '
+          IP: 35.154.59.41
+          USER: ubuntu
+          KEY: ${{ secrets.ORGANIZATION_SSH_KEY }}
+          FOLDER: "/home/bhavicreations/domains/gittest.bhavicreations.com/public_html"
+          RUN: "git pull -v origin production"
